--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.22.0",
+    "bulma": "^0.9.3",
+    "moment": "^2.29.1",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-moment": "^1.1.1",
+    "react-router-dom": "^5.3.0",
+    "sass": "^1.42.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
