--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-moment": "^1.1.1",
     "react-router-dom": "^5.3.0",
     "sass": "^1.42.1"
